2009-07-18  Mark Ellis  <mark@mpellis.org.uk>

	* add compatibility with earlier gtk2 (2.12)

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.14 release

2009-06-03  Mark Ellis <mark@mpellis.org.uk>

	* moved from libglade to gtkbuilder
	* show icon if passworded device present

2009-04-28  Mark Ellis <mark@mpellis.org.uk>

	* By default do not show icon if no device is connected. Added gconf
	  pref to always show. Many thanks to Frank de Lange

2009-04-24  Mark Ellis <mark@mpellis.org.uk>

	* replace gnome_exec with g_spawn, start replacing GnomeProgram

2009-04-20  Mark Ellis <mark@mpellis.org.uk>

	* add some more error checking around rapi calls

2009-04-16  Mark Ellis <mark@mpellis.org.uk>

	* some preparatory work for gnome3/gtk3

2009-04-15  Mark Ellis <mark@mpellis.org.uk>

	* src/synce-trayicon.c - do not free device when just checking
	  it exists !
	* src-synce-trayicon.c - use gtk 2.16 tooltip api if available
	  to update tooltip when reqd

2009-04-10  Mark Ellis <mark@mpellis.org.uk>

	* access SynceInfo parameters with synce_info_get_ functions

2009-01-10  Mark Ellis <mark@mpellis.org.uk>

	* 0.13 release

2009-01-03  Mark Ellis <mark@mpellis.org.uk>

	* changed a few wstr_*_current and _ascii to _utf8

2008-12-13  Mark Ellis <mark@mpellis.org.uk>

	* added .desktop and autostart files

2008-12-11  Mark Ellis <mark@mpellis.org.uk>

	* corrected compiler warnings

2008-12-10  Mark Ellis <mark@mpellis.org.uk>

	* make libnotify required
	* device class - add device property connection-status for
	  passworded devices,  move rapi connection method from dccm
	  clients to here, check if device is locked methods that require
	  a connection
	* dccm client classes - add device-unlocked signal to dccm-client,
	  pass locked devices to device-manager instead of holding on to them
	* device-manager class - add methods providing count of all / 
	  connected / password required devices, and list of names